# uCats

./: .gitignore  README.md  astrocats.py  astrocats_params.json  astrocats_params_shifts+msclg.json  astrocats_params_shifts.json  astrocats_ui.py  conda_environment.yaml  pyproject.toml  setup.cfg  setup.py  μCats.py
notebooks/: μCat example -- 1D signals.ipynb
scripts/: astrocats.py
ucats/: __init__.py  _version.py  anscombe.py  baselines.py  cluster.py  decomposition.py  detection1d.py  events.py  exponential_family.py  globals.py  haar_fisz.py  io_lif.py  masks.py  patches.py  pmt.py  scramble.py  scratch.py  snippets.py  utils.py  visuals.py
ucats/decomposition/: HOSVD.py  Windowed_tSVD.py  __init__.py  ndWindowed_tSVD.py  svd_utils.py
ucats/denoising/: W4D_HOSVD.py  __init__.py  block_svd_denoise_and_separate.py  block_svd_denoise_and_separate_.py  patch_denoise_dmd.py  patch_svd_denoise_with_shifts.py  patch_svd_double_stage.py
